<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/navb_main"
            android:enabled="true"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/navb_search"
            android:enabled="true"
            android:icon="@drawable/ic_round_search_24"
            android:title="@string/search" />
        <item
            android:id="@+id/navb_play"
            android:enabled="true"
            android:icon="@drawable/ic_round_play_circle_filled_24"
            android:title="@string/play" />
        <item
            android:id="@+id/navb_bookmark"
            android:enabled="true"
            android:icon="@drawable/ic_round_menu_book_24"
            android:title="@string/mybooks" />
        <item
            android:id="@+id/navb_settings"
            android:enabled="true"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/settings" />

    </group>
</menu>