<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/buttom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navbar"
        />

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="355dp"
        android:layout_height="36dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/input"
        android:hint="@string/find_your_book"
        android:paddingStart="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_book1"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="28dp"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="@id/edt_search"
        app:layout_constraintStart_toStartOf="@id/edt_search"
        app:layout_constraintTop_toTopOf="@id/edt_search" />

    <LinearLayout
        android:id="@+id/lnl_tabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_search">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="@color/main"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/books"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/authors"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/img_book_little"
        android:layout_width="124dp"
        android:layout_height="148dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/rectangle_60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnl_tabs" />

    <ImageView
        android:id="@+id/icon_bookmark"
        android:layout_width="18dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/ic_round_bookmark_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnl_tabs" />

    <LinearLayout
        android:id="@+id/lnl_desc_right1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="@id/icon_bookmark"
        app:layout_constraintStart_toEndOf="@id/img_book_little"
        app:layout_constraintTop_toBottomOf="@id/lnl_tabs">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/the_little_prince"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/antoine_de_saint_exupery"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/category_background"
                android:padding="7dp"
                android:text="Novel"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/category_background"
                android:padding="7dp"
                android:text="Literature"
                android:textSize="14sp" />


        </LinearLayout>

        <RatingBar
            android:id="@+id/rating_bar_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="5"
            android:numStars="5"
            android:progress="5"
            android:progressTint="@color/yellow"
            android:stepSize="1" />


    </LinearLayout>


    <ImageButton
        android:id="@+id/img_book_2"
        android:layout_width="124dp"
        android:layout_height="148dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/rectangle_62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_book_little" />

    <ImageView
        android:id="@+id/icon_bookmark2"
        android:layout_width="18dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/ic_round_bookmark_border_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnl_desc_right1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_book_2"
        app:layout_constraintTop_toBottomOf="@id/lnl_desc_right1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Woman_house"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/antoine_de_saint_exupery"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/category_background"
                android:padding="7dp"
                android:text="Novel"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/category_background"
                android:padding="7dp"
                android:text="Literature"
                android:textSize="14sp" />


        </LinearLayout>

        <RatingBar
            android:id="@+id/rating_bar_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="5"
            android:numStars="5"
            android:progress="4"
            android:progressTint="@color/yellow"
            android:stepSize="1" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>